// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`OutboundLink should render properly with all props assigned 1`] = `
<a
  className="test-class"
  href="https://tests.com"
=======
exports[`OutboundLink should render with required props 1`] = `
<a
  href="https://tests.com"
  onClick={[Function]}
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
  rel="noopener noreferrer"
  target="_blank"
>
  <span
<<<<<<< HEAD
    className="screenReaderOnly"
=======
    className="ScreenReaderOnly"
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
  >
    Opens in new window
  </span>
  Test
<<<<<<< HEAD
</a>
`;

exports[`OutboundLink should render with just required props passed 1`] = `
<a
  className=""
  href="https://tests.com"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="screenReaderOnly"
  >
    Opens in new window
  </span>
  Test
  <test-file-mock
=======
  <svg
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
    className="externalLinkIcon"
  />
</a>
`;
